# TradingApp

./: .coveragerc  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DETAILED_PHASE_PLAN.md  Makefile  PHASE2_ACCOMPLISHED.md  PHASE3_RUNBOOK.md  PHASE_STATUS_REPORT.md  PROJECT_PLAN.md  README.md  README_VENV.md  VENV_SUMMARY.md  activate_venv.bat  activate_venv.ps1  check_venv.py  config.example.yaml  config.windows.yaml  pyproject.toml  requirements.txt  requirements_py311.txt  test_venv.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
archive/: README_VENV.md  VENV_SUMMARY.md  test_vscode.py
scripts/: bench_backtest.py  plotly_export_from_json.py  setup_env.sh  setup_windows.ps1  verify_plotly.py
tests/: test_backtest_engine.py  test_cli.py  test_cli_smoke.py  test_config_settings.py  test_corporate_actions.py  test_execution_simulator.py  test_execution_simulator_properties.py  test_parquet_adapter.py  test_portfolio_accounting.py  test_portfolio_accounting_properties.py  test_reporting.py  test_retention.py  test_risk_manager.py  test_smoke.py  test_summary_snapshot.py
trading/: __init__.py  __main__.py  cli.py
trading/backtest/: engine.py  metrics.py
trading/config/: settings.py
trading/core/: __init__.py  contracts.py  models.py  retention.py
trading/data/: corporate_actions.py  fixtures.py  parquet_adapter.py  series_loader.py
trading/execution/: simulator.py
trading/live/: connection.py
trading/observability/: logging.py
trading/portfolio/: accounting.py
trading/reporting/: report.html.j2  report.py
trading/risk/: manager.py
trading/strategy/: __init__.py  registry.py
trading/strategy/examples/: ma_crossover.py  momentum.py
trading/util/: clock.py
