[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-app"
version = "0.1.0"
description = "Algorithmic trading bot (IBKR, Python)"
authors = [{name = "Your Name"}]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
  "ib-insync>=0.9.86",
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=16",
  "pandas-market-calendars>=4.5",
  "pydantic>=2.6",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "tenacity>=8.5",
  "plotly>=5.20",
  "jinja2>=3.1",
  "yfinance>=0.2.40"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5",
  "black>=24.4",
  "pre-commit>=3.7"
]

[project.scripts]
trading = "trading.__main__:app"

[tool.setuptools]
packages = ["trading"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["trading", "tests"]
exclude = "(^venv_py311/|^venv/|^\\.venv/|^runs/|^data/|^build/|^dist/|^reports/)"

[tool.mypy.overrides]
module = [
  "trading.cli",
]
disable_error_code = [
  "misc",
  "no-untyped-def",
  "no-untyped-call",
]

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py", "*_test.py"]
