[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-app"
version = "0.1.0"
description = "Algorithmic trading bot (IBKR, Python)"
authors = [{name = "Your Name"}]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
  "ib-insync>=0.9.86,<1.0.0",
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
  "pyarrow>=16,<18",
  "pandas-market-calendars>=4.5,<6",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.3,<3",
  "typer>=0.12,<1.0",
  "python-dotenv>=1.0,<2",
  "structlog>=24.1,<25",
  "tenacity>=8.5,<9",
  "plotly>=5.20,<6",
  "jinja2>=3.1,<4",
  "yfinance>=0.2.40,<0.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5.0,<6",
  "pytest-xdist>=3.6,<4",
  "hypothesis>=6.102,<7",
  "mypy>=1.10,<2",
  "ruff>=0.5,<1",
  "black>=24.4,<25",
  "pre-commit>=3.7,<4",
  "bandit>=1.7,<2",
  "pip-audit>=2.7,<3"
]

[project.scripts]
trading = "trading.cli:app"

[tool.setuptools]
packages = ["trading"]
package-data = {"trading" = ["py.typed", "**/*.j2"]}

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["trading", "tests"]
exclude = "(^venv_py311/|^venv/|^\\.venv/|^runs/|^data/|^build/|^dist/|^reports/)"

[[tool.mypy.overrides]]
module = ["trading.cli"]
disable_error_code = ["misc", "no-untyped-def", "no-untyped-call"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
  "integration: marks tests as integration (deselect with '-m \"not integration\"')"
]
